--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,8 +3,11 @@
   <div class="wrapper">
     {%- assign default_paths = site.pages | map: "path" -%}
     {%- assign page_paths = site.header_pages | default: default_paths -%}
-    <img src="/images/logo-forweb.jpg" style="float:left;height:55px">
-    <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
+    
+    <a class="site-title" rel="author" href="{{ "/" | relative_url }}">
+      <img src="/images/logo-forweb.jpg" style="float:left;height:55px">
+      {{ site.title | escape }}
+    </a>
 
     {%- if page_paths -%}
       <nav class="site-nav">
