--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,13 +21,11 @@
         </label>
 
         <div class="trigger">
-          {%- for path in page_paths -%}
-            {%- assign my_page = site.pages | where: "path", path | first -%}
-            {%- if my_page.title -%}
-            <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
-            {%- endif -%}
-          {%- endfor -%}
           <a class="page-link" href="https://forum.orthogonaldevices.com/">Forum</a>
+          <a class="page-link" href="https://github.com/odevices">Docs</a>
+          <a class="page-link" href="https://www.twitter.com/odevices">Twitter</a>
+          <a class="page-link" href="https://store.orthogonaldevices.com/">Store</a>
+          <a class="page-link" href="/about">About</a>
         </div>
       </nav>
     {%- endif -%}
