--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,6 +21,9 @@
         </label>
 
         <div class="trigger">
+          <a class="page-link" href="/modules/er-101.html">ER-101</a>
+          <a class="page-link" href="/modules/er-102.html">ER-102</a>
+          <a class="page-link" href="/modules/er-301.html">ER-301</a>
           <a class="page-link" href="https://forum.orthogonaldevices.com/">Forum</a>
           <a class="page-link" href="https://github.com/odevices">Docs</a>
           <a class="page-link" href="https://www.twitter.com/odevices">Twitter</a>
