Set cursors on mouse-over

--- a/_layouts/module-zoom.html
+++ b/_layouts/module-zoom.html
@@ -3,5 +3,5 @@ layout: default
 ---
 
   <a href="{{ page.image_link | relative_url }}">
-    <img src="{{ page.image | relative_url }}" style="width: 200%;">
+    <img src="{{ page.image | relative_url }}" style="width: 200%; cursor: zoom-out;">
   </a>
