--- a/_layouts/module.html
+++ b/_layouts/module.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <a href="{{ page.image_link | relative_url }}">
-  <img src="{{ page.image | relative_url }}">
+  <img src="{{ page.image | relative_url }}" style="cursor: zoom-in;">
 </a>
 
 <div style="max-width:20cm">
