--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,8 +23,7 @@
         <div class="trigger">
           <a class="page-link" href="/">Modules</a>
           <a class="page-link" href="https://forum.orthogonaldevices.com/">Forum</a>
-          <a class="page-link" href="https://github.com/odevices">Docs</a>
-          <a class="page-link" href="https://www.twitter.com/odevices">Twitter</a>
+          <a class="page-link" href="https://www.twitter.com/odevices">News</a>
           <a class="page-link" href="https://store.orthogonaldevices.com/">Store</a>
           <a class="page-link" href="/about">About</a>
         </div>
