--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,7 +24,7 @@
           <a class="page-link" href="/">Modules</a>
           <a class="page-link" href="https://forum.orthogonaldevices.com/">Forum</a>
           <a class="page-link" href="https://www.twitter.com/odevices">News</a>
-          <a class="page-link" href="https://odevices.github.io/docs">Docs</a>
+          <a class="page-link" href="https://www.orthogonaldevices.com/docs">Docs</a>
           <a class="page-link" href={{ "/store.html" | relative_url }}>Store</a>
           <a class="page-link" href="/about">About</a>
         </div>
