Fix broken links to docs

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,9 +22,9 @@
 
         <div class="trigger">
           <a class="page-link" href="/">Modules</a>
-          <a class="page-link" href="https://forum.orthogonaldevices.com/">Forum</a>
+          <a class="page-link" href="https://forum.orthogonaldevices.com">Forum</a>
           <a class="page-link" href="https://www.twitter.com/odevices">News</a>
-          <a class="page-link" href="https://www.orthogonaldevices.com/docs">Docs</a>
+          <a class="page-link" href="https://docs.orthogonaldevices.com">Docs</a>
           <a class="page-link" href={{ "/store-closed.html" | relative_url }}>Store</a>
           <a class="page-link" href="/about">About</a>
         </div>
