--- a/_layouts/module.html
+++ b/_layouts/module.html
@@ -5,7 +5,7 @@ layout: default
   <img src="{{ page.image | relative_url }}" style="cursor: zoom-in; margin-bottom: 20px;">
 </a>
 
-<h2>{{page.title}} {{page.name}}</h2>
+<h2>{{page.title}} {{page.subtitle}}</h2>
 <div style="margin-top: 10px; margin-bottom: 10px;">
   <hr>
   <a href="{{ page.docs }}">DOCS</a> |  <a href="{{ page.firmware }}">FIRMWARE</a> | <a href="{{ page.changelog }}">CHANGELOG</a>
