Fix broken links

--- a/_layouts/module-zoom.html
+++ b/_layouts/module-zoom.html
@@ -2,6 +2,6 @@
 layout: default
 ---
 
-  <a href="{{ page.image_link | relative_url }}">
-    <img src="{{ page.image | relative_url }}" style="width: 200%; cursor: zoom-out;">
-  </a>
+<a href="{{ page.image_link }}">
+  <img src="{{ page.image | relative_url }}" style="width: 200%; cursor: zoom-out;">
+</a>
